<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#E0E1E0"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:padding="30dp"
                android:text="@string/tile_activity_main"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton_calculator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_descript_calculator"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icone_calculadora" />

                <ImageButton
                    android:id="@+id/imageButton_geometricShapes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_descript_geometric_shapes"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icone_triangulo"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_descript_cylinder"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icone_cilindro" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_descript_time_calculation"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icone_relogio" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton_findCEP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="#555555"
                    android:contentDescription="@string/buscaCep"
                    android:scaleType="fitCenter"
                    app:srcCompat="@android:drawable/ic_menu_search" />

                <ImageButton
                    android:id="@+id/imageButton_IMC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@android:drawable/ic_menu_slideshow" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>